--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,4 +1,4 @@
-name: Spring Boot CI/CD
+name: Spring Boot CI/CD with Gradle
 
 on:
   push:
@@ -24,23 +24,71 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # Step 3: Cache Maven dependencies
-      - name: Cache Maven dependencies
+      # Step 3: Cache Gradle dependencies
+      - name: Cache Gradle dependencies
         uses: actions/cache@v3
         with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
-            ${{ runner.os }}-m2
+            ${{ runner.os }}-gradle
 
       # Step 4: Build the Spring Boot application
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Build with Gradle
+        run: ./gradlew clean build
 
       # Step 5: Run tests
       - name: Run Tests
-        run: mvn test
+        run: ./gradlew test
 
-      # Step 6: Package the application
+      # Step 6: Create bootJar (packaging step)
       - name: Package application
-        run: mvn package
+        run: ./gradlew bootJar
+
+
+#name: Spring Boot CI/CD
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#  pull_request:
+#    branches:
+#      - main
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      # Step 1: Check out the code
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#
+#      # Step 2: Set up JDK
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'temurin
+#
+#      # Step 3: Cache Maven dependencies
+#      - name: Cache Maven dependencies
+#        uses: actions/cache@v3
+#        with:
+#          path: ~/.m2
+#          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+#          restore-keys: |
+#            ${{ runner.os }}-m2
+#
+#      # Step 4: Build the Spring Boot application
+#      - name: Build with Maven
+#        run: mvn clean install
+#
+#      # Step 5: Run tests
+#      - name: Run Tests
+#        run: mvn test
+#
+#      # Step 6: Package the application
+#      - name: Package application
+#        run: mvn package
