--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -24,7 +24,11 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # Step 3: Cache Gradle dependencies
+      # Step 3: Grant execute permission to Gradle wrapper
+      - name: Grant execute permission for Gradle
+        run: chmod +x ./gradlew
+
+      # Step 4: Cache Gradle dependencies
       - name: Cache Gradle dependencies
         uses: actions/cache@v3
         with:
@@ -33,17 +37,18 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle
 
-      # Step 4: Build the Spring Boot application
+      # Step 5: Build the Spring Boot application
       - name: Build with Gradle
         run: ./gradlew clean build
 
-      # Step 5: Run tests
+      # Step 6: Run tests
       - name: Run Tests
         run: ./gradlew test
 
-      # Step 6: Create bootJar (packaging step)
+      # Step 7: Create bootJar (packaging step)
       - name: Package application
         run: ./gradlew bootJar
+
 
 
 #name: Spring Boot CI/CD
